<resources>

    <string name="app_name">UFyp</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    
     <string-array name="choice_array">
        <item>Default</item>
        <item>Record</item>
        <item>Stop recording</item> 
        <item>Debugging</item> 
        <item>RouteContri</item>
    </string-array> 
    
    <string name="tap_instructions">Tap Values</string>
    <string name="start">Start</string>
    <string name="button_done">Done</string>
    <string name="today_task">&quot;Today's Task&quot;</string>
    <string name="instructions">Please enter a route between the start and end point show on the map. You can either choose to use Google\'s recommended route or entering your own custom route by long pressing specific roads (in the right direction) that you would prefer to travel through.</string>
    <string name="startpt">Start :</string>
    <string name="endpt">End :</string>
    <color name="Blue">#0000FF</color>
    <string name="maptag">maptag</string>
    <color name="Black">#000000</color>
    <color name="White">#FFFFFF</color>
    <string name="press_start">Press Start to begin</string> 

	<string name="high">High</string>
	<string name="low">Low</string>
	<string name="lightdefault">Bright</string>
	
	<string name="temperature">Temperature:</string>
	<string name="temperatureUnits">°C</string>
	
	<string name="weatherboard">Weatherboard :</string>
	<string name="status_connected">Connected</string>
	<string name="status_disconnected">Disconnected</string>
	<string name="rhUnits">%</string>
	<string name="desc">nil</string>
	<string name="decdefault">00.0</string>

</resources>